deployments/betanin/betanin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: betanin
  namespace: betanin
spec:
  ingressClassName: nginx
  rules:
  - host: beets.apps.gensokyo-cluster.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: betanin
            port:
              number: 9393
