deployments/betanin/betanin-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: betanin
---
apiVersion: v1
kind: Service
metadata:
  name: betanin-headless
  namespace: betanin
  labels:
    app: betanin
spec:
  ports:
  - port: 9393
    name: web
  selector:
    app: betanin
  clusterIP: None
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: betanin-allow-all
  namespace: betanin
spec:
  podSelector: {}
  ingress:
  - {}
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: betanin
  namespace: betanin
  labels:
    app: betanin
  annotations:
    # Tests must be disabled due to pecularities in the sentriz/betanin docker image.
    kube-score/ignore: container-security-context-user-group-id,container-security-context-readonlyrootfilesystem
spec:
  serviceName: "betanin-headless"
  replicas: 1
  selector:
    matchLabels:
      app: betanin
  volumeClaimTemplates:
  - metadata:
      namespace: betanin
      name: config
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "gensokyo-mayastor-singleton"
      resources:
        requests:
          storage: 6Gi
  template:
    metadata:
      labels:
        app: betanin
    spec:
      securityContext:
        fsGroupChangePolicy: "Always"
        fsGroup: 10001
      containers:
      - name: betanin
        image: sentriz/betanin:21b0917
        imagePullPolicy: Always
        securityContext:
          # For some reason this container uses sudo and breaks when ran with a UID other than 0.
          runAsUser: 0
          runAsGroup: 10001
          allowPrivilegeEscalation: false
          # Setting to true breaks the container
          readOnlyRootFilesystem: false
        resources:
          limits:
            cpu: "2000m"
            memory: "512Mi"
            ephemeral-storage: "512Mi"
          requests:
            cpu: "500m"
            memory: "128Mi"
            ephemeral-storage: "16Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 9393
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 9393
          name: http
        volumeMounts:
        - name: library-vol
          mountPath: /music
        - name: downloads-vol
          mountPath: /downloads
        - name: inbox-vol
          mountPath: /inbox
        - name: config
          mountPath: /b/.config/beets
          subPath: beets
        - name: config
          mountPath: /b/.config/betanin
          subPath: betanin
        - name: config
          mountPath: /b/.local/share/betanin
          subPath: persist
      restartPolicy: Always
      volumes:
      - name: config-files
        configMap:
          name: betanin-config
          defaultMode: 0770
      - name: config-secret
        secret:
          secretName: betanin-secret
          defaultMode: 0770
      - name: config
        persistentVolumeClaim:
          claimName: betanin-config-pvc
      - name: inbox-vol
        nfs:
          server: 10.0.1.10
          path: /mnt/rust2/media/music/inbox
      - name: library-vol
        nfs:
          server: 10.0.1.10
          path: /mnt/rust2/media/music/library
      - name: downloads-vol
        nfs:
          server: 10.0.1.10
          path: /mnt/rust2/torrents/music
